--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
   <button type="button" id="displayLineBtn">경계선 보기</button>
 
   <div id="map" style="width:100%;height:700px;"></div>
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{apiKey}}"></script>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{apiKey}}&libraries=services"></script>
   <script type="module" src="/js/index.js"></script>
 </body>
 
