--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,20 +4,53 @@
 <head>
   <meta charset="utf-8" />
   <title>KOREA DIVISION MAP BY R3N</title>
+  <link href="/css/tailwinded.css" rel="stylesheet">
 </head>
 
 <body>
-  <h2>대한민국 행정구역</h2>
-  <div>
-    <select id="cityCode" name="cityCode">
-      {{#each cityCodeList}}
-      <option value="{{this.cityCode}}">{{this.name}}</option>
-      {{/each}}
-    </select>
+  <div class="dmc-container">
+    <div class="dmc-flex">
+      <section class="dmc-col left">
+        <h1 class="text-3xl font-bold">대한민국 행정구역</h1>
+        <div class="dmc-flex">
+          <div class="dmc-select-list">
+            <select id="cityCode" name="cityCode">
+              {{#each cityCodeList}}
+              <option value="{{this.cityCode}}">{{this.name}}</option>
+              {{/each}}
+            </select>
+          </div>
+          <button type="button" id="displayLineBtn" class="btn primary">경계선 보기</button>
+        </div>
+        <div id="map" style="width:100%;height:700px;margin-top:10px"></div>
+      </section>
+      <section class="dmc-col right">
+        <div>
+          <h1 class="text-3xl font-bold">안내</h1>
+          <ul class="list-disc">
+            <li>
+              법정동 경계선 좌표: <a href="https://map.ngii.go.kr/ms/map/NlipMap.do?tabGb=statsMap" target="_blank"
+                title="국토정보플랫폼 사이트 새 창 열림">국토정보플랫폼</a>에서 공개한
+              국토 통계 공시지가 리경계, 읍면경계 202207 기준 shp 이용.
+            </li>
+            <li>
+              법정동 목록: <a href="https://www.code.go.kr/stdcode/regCodeL.do" target="_blank"
+                title="행정표준코드관리시스템 새 창 열림">행정표준코드관리시스템</a>에서 제공하는 자료 이용.</li>
+            <li>두 자료의 출처가 다른 바 실제 법정동 목록과 좌표 영역이 상이할 수 있습니다. (예: 대구광역시 칠곡군)</li>
+            <li>r3n 작성, 2024. 03. 07.</li>
+          </ul>
+        </div>
+        <div class="mt-10">
+          <h1 class="text-3xl font-bold">REFERENCES</h1>
+          <ul class="list-disc">
+            <li>nestJS 10.0.0</li>
+            <li>tailwindcss 3.4.1</li>
+            <li>kakaomap API</li>
+          </ul>
+        </div>
+      </section>
+    </div>
   </div>
-  <button type="button" id="displayLineBtn">경계선 보기</button>
-
-  <div id="map" style="width:100%;height:700px;"></div>
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{apiKey}}&libraries=services"></script>
   <script type="module" src="/js/index.js"></script>
 </body>
