--- a/public/css/index.css
+++ b/public/css/index.css
@@ -50,6 +50,6 @@
 
 .btn.primary {
   color: #fff;
-  background-color: #cccbef !important;
-  border: 1px solid #cccbef !important;
+  background-color: #a3d6eb !important;
+  border: 1px solid #a3d6eb !important;
 }
