MODIFY 경계선 보기 클릭 시 지도 확대, 지도 중앙 좌표 재설정 추가

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
         <h1 class="text-3xl font-bold">대한민국 행정구역</h1>
         <div class="dmc-flex">
           <div class="dmc-select-list">
-            <select id="cityCode" name="cityCode">
+            <select id="cityCode" name="cityCode" data-map-level="10">
               {{#each cityCodeList}}
               <option value="{{this.cityCode}}">{{this.name}}</option>
               {{/each}}
