--- a/views/sub2List.hbs
+++ b/views/sub2List.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-  <select id="sub2Code" name="sub2Code" data-city-code="{{cityCode}}" data-sub-code="{{subCode}}">
+  <select id="sub2Code" name="sub2Code" data-city-code="{{cityCode}}" data-sub-code="{{subCode}}" data-map-level="5">
     <option value="">읍/면 전체</option>
     {{#each sub2CodeList}}
     <option value="{{this.sub2Code}}">{{this.name}}</option>
