--- a/views/subList.hbs
+++ b/views/subList.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-  <select id="subCode" name="subCode" data-city-code="{{cityCode}}">
+  <select id="subCode" name="subCode" data-city-code="{{cityCode}}" data-map-level="7">
     <option value="">군/구 전체</option>
     {{#each subCodeList}}
     <option value="{{this.subCode}}">{{this.name}}</option>
