MODIFY 버튼 스타일 변경 / 그라디언트 및 배경 색상 추가 ADD margin-left 관리 스타일 추가

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,7 +26,7 @@
       </section>
       <section class="dmc-col right">
         <div>
-          <h1 class="text-3xl font-bold">안내</h1>
+          <h1 class="text-3xl font-bold ml-20">안내</h1>
           <ul class="list-disc">
             <li>
               법정동 경계선 좌표: <a href="https://map.ngii.go.kr/ms/map/NlipMap.do?tabGb=statsMap" target="_blank"
@@ -41,7 +41,7 @@
           </ul>
         </div>
         <div class="mt-10">
-          <h1 class="text-3xl font-bold">REFERENCES</h1>
+          <h1 class="text-3xl font-bold ml-20">REFERENCES</h1>
           <ul class="list-disc">
             <li>nestJS 10.0.0</li>
             <li>tailwindcss 3.4.1</li>
