--- a/public/css/tailwinded.css
+++ b/public/css/tailwinded.css
@@ -544,6 +544,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.ml-20 {
+  margin-left: 5rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -603,17 +607,30 @@ video {
 }
 
 .btn {
-  margin-left: 5px;
+  margin-left: 4px;
   margin-top: 10px;
-  padding: 5px 12px;
+  padding: 5px 18px;
 }
 
 .btn.primary {
   color: #fff;
+  border: none;
+  box-sizing: border-box;
   background-color: #a3d6eb !important;
-  border: 1px solid #a3d6eb !important;
+  background: linear-gradient(to right, #7298a8, #735ccd);
+  /*a3d6eb*/
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease;
+}
+
+.btn.primary:hover {
+  box-shadow: none;
 }
 
 select {
   width: 150px;
+}
+
+.ml-20 {
+  margin-left: 20px;
 }
