ADD 리소스 저장소 주소 안내 ADD li list style 이모지 이용 추가

--- a/public/css/tailwinded.css
+++ b/public/css/tailwinded.css
@@ -592,6 +592,16 @@ video {
   list-style: disc !important;
 }
 
+.list-github {
+  list-style: none !important;
+  padding: 0;
+}
+
+.list-github li:before {
+  content: "\1F47E";
+  margin-right: 8px;
+}
+
 .dmc-col.right {
   width: 30%;
 }
