--- a/views/index.hbs
+++ b/views/index.hbs
@@ -48,6 +48,12 @@
             <li>kakaomap API</li>
           </ul>
         </div>
+        <div class="mt-10">
+          <h1 class="text-3xl font-bold ml-20">CONTACT</h1>
+          <ul class="list-github">
+            <li>https://github.com/ryeon8/division-map-client</li>
+          </ul>
+        </div>
       </section>
     </div>
   </div>
