MODIFY h1 마진 추가

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -31,6 +31,7 @@
         <div>
           <h1 class="text-3xl font-bold ml-20">안내</h1>
           <ul class="list-disc">
+            <li>지도 클릭 시 클릭된 위치의 행정동 정보를 표시합니다.</li>
             <li>
               법정동 경계선 좌표: <a href="https://map.ngii.go.kr/ms/map/NlipMap.do?tabGb=statsMap" target="_blank"
                 title="국토정보플랫폼 사이트 새 창 열림">국토정보플랫폼</a>에서 공개한
